--- a/src/main/web/src/app/pages/user-card/user-card.component.css
+++ b/src/main/web/src/app/pages/user-card/user-card.component.css
@@ -14,6 +14,10 @@ p {
       top: 25%;
   }
 
+  ::ng-deep nb-checkbox label {
+    margin-top: 20px !important;
+  }
+
   ::ng-deep .ui-table,
   .ui-table .ui-table-wrapper table {
     font-size: 13px !important;
