Corrected algorithm for calculating customer monthly usage; Added reimport ability.

--- a/src/main/web/src/app/pages/device/device.component.html
+++ b/src/main/web/src/app/pages/device/device.component.html
@@ -256,7 +256,7 @@
                 </span>
               </div>
 
-              <div class="ui-g-12">
+              <div class="ui-g-12" style="margin-top: 0px !important">
                 <div class="ui-g-12"><nb-checkbox [value]="(zoneDevice$ | async) ? true : undefined" (checkedChange)="handleChange($event)"><u><b>{{ 'Zone device' | translate }}</b></u></nb-checkbox></div>
 
 
