--- a/src/main/web/src/app/pages/user-card/user-card.component.html
+++ b/src/main/web/src/app/pages/user-card/user-card.component.html
@@ -256,7 +256,8 @@
         [fontWeightFunction]="fontWeight"
         [styleColorFunction]="styleColor"
         (clickFunction)="onCustomerNameClick($event)"
-        rows="9"
+        [sortable]="true"
+        rows="8"
       ></ngx-table>
 
       <div class="button-positioner">
