--- a/src/main/web/src/app/pages/user-card/user-card-graph.component.html
+++ b/src/main/web/src/app/pages/user-card/user-card-graph.component.html
@@ -1,7 +1,7 @@
 <p-dialog header="{{ 'User Card '|translate }}" [(visible)]="displayGraph"
           (onShow)="onShow()" (onHide)="onHide()"
           [focusOnShow]="false" [responsive]="true"  dynamic="true"
-          showEffect="fade" [modal]="true" position="center" [style]="{width: '90%', height: '820px', 'margin-top': '65px'}">
+          showEffect="fade" [modal]="true" position="center" [style]="{width: '95%', height: '820px', 'margin-top': '65px'}">
 
         <div class="ui-g ui-fluid" >
           <div class="ui-g-12">
@@ -16,6 +16,7 @@
                   [rows]="8"
                   [totalRecords]="totalRecords"
                   [loading]="loading"
+                  [sortable]="true"
                 ></ngx-table>
               </nb-card-body>
             </nb-card>
