restored primeng icons version 2.0.0. Fixed width for import.

--- a/src/main/web/src/app/pages/user-card/user-card.component.html
+++ b/src/main/web/src/app/pages/user-card/user-card.component.html
@@ -267,6 +267,10 @@
         <p-button (onClick)="onGraphButtonClick()" label="{{ 'Graph' | translate }}"></p-button>
         <div class="divider"></div>
       </div>
+      <div class="button-positioner">
+        <p-button (onClick)="onReportButtonClick()" label="{{ 'Report' | translate }}"></p-button>
+        <div class="divider"></div>
+      </div>
     </nb-card-body>
   </nb-card>
 
