jasper reports - summary implementation.

--- a/src/main/web/src/app/pages/user-card/user-card.component.html
+++ b/src/main/web/src/app/pages/user-card/user-card.component.html
@@ -268,7 +268,7 @@
         <div class="divider"></div>
       </div>
       <div class="button-positioner">
-        <p-button (onClick)="onReportButtonClick()" label="{{ 'Report' | translate }}"></p-button>
+        <p-button (onClick)="onReportButtonClick()" label="{{ 'Generate Report' | translate }}"></p-button>
         <div class="divider"></div>
       </div>
     </nb-card-body>
