--- a/src/main/web/src/app/pages/user-card/user-card-graph.component.html
+++ b/src/main/web/src/app/pages/user-card/user-card-graph.component.html
@@ -16,7 +16,7 @@
                   [rows]="8"
                   [totalRecords]="totalRecords"
                   [loading]="loading"
-                  [sortable]="true"
+                  [sortable]="false"
                 ></ngx-table>
               </nb-card-body>
             </nb-card>
