--- a/src/main/web/src/app/pages/user-card/user-card.component.html
+++ b/src/main/web/src/app/pages/user-card/user-card.component.html
@@ -62,7 +62,7 @@
         <div class="ui-g-12">
 
 
-          <div class="ui-g-11">
+          <div class="ui-g-10">
           <div class="ui-g-2">
             <span class="ui-float-label">
               <input
@@ -126,16 +126,22 @@
               <label for="usageCurrentTo">{{ "Usage To" | translate }}</label>
             </span>
           </div>
-
         </div>
-          <div class="ui-g-1">
+        <div class="ui-g-2">
+          <div class="ui-g-8">
+            <span class="ui-float-label">
+              <p-calendar [(ngModel)]="dateFrom" dateFormat="dd.mm.yy" showIcon="true" appendTo="body" [yearNavigator]="true" yearRange="2000:2030" [monthNavigator]="true"></p-calendar>
+              <label for="dateFrom">{{ "Date From" | translate }}</label>
+              </span>
+          </div>
+          <div class="ui-g-4">
             <p-button (click)="search()"  icon="fa fa-search" label="{{ 'Search' | translate }}"></p-button>
           </div>
+        </div>
 
         </div>
         <div class="ui-g-12" >
-          <div class="ui-g-11">
-          <ng-container *ngIf="displayType === 1">
+          <div class="ui-g-10">
           <div class="ui-g-2">
             <span class="ui-float-label">
               <p-multiSelect appendTo="body" [options]="readingBooks" defaultLabel="&nbsp;" [(ngModel)]="readingBook" [showTransitionOptions]="'0ms'" [hideTransitionOptions]="'0ms'"></p-multiSelect>
@@ -165,36 +171,7 @@
               <label for="gsmId">{{ "ADOGSM-2 ID" | translate }}</label>
             </span>
           </div>
-
-        </ng-container>
-        <ng-container *ngIf="displayType === 2">
-
-
-          <div class="ui-g-2">
-            <span class="ui-float-label">
-              <p-calendar [(ngModel)]="dateFrom" dateFormat="dd.mm.yy" showIcon="true"></p-calendar>
-              <label for="dateFrom">{{ "Date From" | translate }}</label>
-              </span>
-          </div>
-          <div class="ui-g-2">
-            <span class="ui-float-label">
-              <p-calendar [(ngModel)]="dateTo" dateFormat="dd.mm.yy" showIcon="true"></p-calendar>
-              <label for="dateTo">{{ "Date To" | translate }}</label>
-            </span>
-          </div>
-          <div class="ui-g-2">
-            <span class="ui-float-label">
-              <input
-              pInputText
-              id="gsmId"
-              [(ngModel)]="gsmId"
-              onclick="this.setSelectionRange(0, this.value.length)"
-            />
-              <label for="gsmId">{{ "ADOGSM-2 ID" | translate }}</label>
-            </span>
-          </div>
-        </ng-container>
-          <div class="ui-g-2">
+         <div class="ui-g-2">
             <span class="ui-float-label">
               <input
                 pInputText
@@ -217,13 +194,19 @@
             </span>
           </div>
           </div>
-          <div class="ui-g-1">
-            <p-button (click)="clear()" icon="fa fa-refresh" label="&nbsp;&nbsp;{{ 'Clear' | translate }}"></p-button>
+
+          <div class="ui-g-2">
+            <div class="ui-g-8">
+              <span class="ui-float-label">
+                <p-calendar [(ngModel)]="dateTo" appendTo="body" [yearNavigator]="true" [monthNavigator]="true" yearRange="2000:2030" dateFormat="dd.mm.yy" showIcon="true"></p-calendar>
+                <label for="dateTo">{{ "Date To" | translate }}</label>
+                </span>
+            </div>
+            <div class="ui-g-4">
+              <p-button (click)="clear()" icon="fa fa-refresh" label="&nbsp;&nbsp;{{ 'Clear' | translate }}"></p-button>
+            </div>
           </div>
         </div>
-
-
-
       </div>
 
     </nb-card-body>
