--- a/src/main/web/src/app/pages/account-management/mail-account.component.html
+++ b/src/main/web/src/app/pages/account-management/mail-account.component.html
@@ -135,6 +135,14 @@
           </div>
           <div class="ui-g-12">
             <div class="ui-g-4">
+                <label for="sender">Check Time:</label>
+            </div>
+            <div class="ui-g-8">
+              <input pInputText id="checkTime" name="checkTime"  formControlName="checkTime" (click)="$event.target.select()"  class="form-control" />
+            </div>
+          </div>
+          <div class="ui-g-12">
+            <div class="ui-g-4">
                 <label for="sender">Last Check:</label>
             </div>
             <div class="ui-g-8">
