--- a/src/main/web/src/app/pages/device/device.component.html
+++ b/src/main/web/src/app/pages/device/device.component.html
@@ -260,7 +260,7 @@
               </div>
               <div class="ui-g-4">
                 <span class="ui-float-label">
-                  <p-dropdown [options]="meduiums" name="medium"
+                  <p-dropdown [options]="mediumsLocalized" name="medium"
                   [autoDisplayFirst]="false"
                   formControlName="medium" optionLabel="label" ></p-dropdown>
                   <label for="medium">{{ 'Medium' | translate }}</label>
