--- a/src/main/web/src/app/@theme/styles/_overrides.scss
+++ b/src/main/web/src/app/@theme/styles/_overrides.scss
@@ -21,6 +21,10 @@
   }
 }
 
+.nb-theme-default nb-layout.window-mode .layout nb-layout-header {
+  z-index: 600 !important;
+}
+
 .nb-theme-default nb-layout .layout .layout-container .content .columns nb-layout-column {
   padding: 1.35rem 2.25rem 0.75rem !important;
 }
@@ -45,6 +49,13 @@
   height: 100%;
   -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(Opacity=20)';
   opacity: 0.2;
+}
+
+body .ui-paginator .ui-dropdown {
+  margin-left: 0.5em;
+  height: 2.286em;
+  min-width: auto;
+  margin-top: 2px !important;
 }
 
 .ui-datatable .ui-datatable-loading-content {
