--- a/src/main/web/src/app/pages/device/device.component.css
+++ b/src/main/web/src/app/pages/device/device.component.css
@@ -2,3 +2,9 @@
 ::ng-deep  body #address > .ui-dropdown {
   margin-top: 6px !important;
 }
+
+::ng-deep  body #deviceDialog {
+  z-index: 2500 i !important;
+}
+
+
