--- a/src/main/web/src/app/libs/toolbox-components/ngx-table/ngx-table.component.html
+++ b/src/main/web/src/app/libs/toolbox-components/ngx-table/ngx-table.component.html
@@ -7,6 +7,7 @@
 [scrollable]="true"
 [paginator]="true"
 [rows]="rows"
+[rowsPerPageOptions]="[10,25,50]"
 [style]="{'width':'100%'}"
 scrollHeight="58vh"
 selectionMode="single"
