--- a/src/main/web/src/app/@theme/components/header/header.component.html
+++ b/src/main/web/src/app/@theme/components/header/header.component.html
@@ -14,6 +14,7 @@
     <nb-action class="user-action" *nbIsGranted="['view', 'user']" >
       <nb-user [nbContextMenu]="userMenu"
                [name]="user?.name"
+               [title]="user?.title"
                [nbContextMenuTag]="tag">
 
       </nb-user>
