--- a/src/main/web/src/app/pages/user-card/user-card-details.component.html
+++ b/src/main/web/src/app/pages/user-card/user-card-details.component.html
@@ -20,7 +20,7 @@
                       <div class="ui-g-4">
                         <span class="ui-float-label">
                           <input pInputText id="customerName" [(ngModel)]="customerName" disabled />
-                          <label for="customerName">{{ 'Customer Name' | translate }}</label>
+                          <label for="customerName">{{ 'Customer name' | translate }}</label>
                         </span>
                       </div>
 
